{
    "name": "Keyboard",
    "maps": [
        {
            "name": "Keyboard",
            "id": "5a4fb17a-39d3-452d-8234-82fc035ec5ee",
            "actions": [
                {
                    "name": "Turret1",
                    "type": "Button",
                    "id": "c2fcae01-0941-4e53-9b40-f4892fb3d517",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turret2",
                    "type": "Button",
                    "id": "17bb7305-809a-48f3-85b4-2a164afa7ddb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turret3",
                    "type": "Button",
                    "id": "d4898fd9-d1ae-46fe-aace-4f2bb65d2df3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turret4",
                    "type": "Button",
                    "id": "0a539e11-92d5-417f-8a64-69e3af859ff8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turret5",
                    "type": "Button",
                    "id": "808162fc-5397-4da5-b8f1-a41e15e5298e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b866cad8-6cc9-458e-acfb-24546a703419",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turret1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b00209fa-0b98-477e-a4f7-50719df030d4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turret2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dc45445-bbb5-4011-82cb-a8e119b31f0d",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turret3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ac07c8f-cb15-46d7-bc6a-f22b6e6d4b8f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turret4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9f2c727-3d07-4e5a-a255-a3f42a1a4e53",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turret5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}