{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "eafed1c1-4b28-43ed-82a2-693d9d02a48b",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "4fa58595-29ed-4b83-9fd6-87ede91aaf06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "7e98a34c-d702-4563-9780-b8b20183061e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CancelBuild",
                    "type": "Button",
                    "id": "34ab4717-3c20-4aac-9618-9d45fc7464e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c18a00ca-9058-4188-9042-047c353986c3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84110140-e6de-4ff7-a7e9-d3fd95287a78",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4704193-00ef-4c8d-b59c-46e5ba1c27eb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}